07-orthanc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orthanc
  namespace: orthanc-santiago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orthanc
  template:
    metadata:
      labels:
        app: orthanc
    spec:
      containers:
      - name: orthanc
        image: orthancteam/orthanc:latest
        ports:
        - containerPort: 8042
          name: http
        - containerPort: 4242
          name: dicom
        volumeMounts:
        - name: storage
          mountPath: /var/lib/orthanc/db
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: orthanc-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: orthanc-service
  namespace: orthanc-santiago
spec:
  type: ClusterIP
  selector:
    app: orthanc
  ports:
  - name: http
    port: 8042
    targetPort: 8042
  - name: dicom
    port: 4242
    targetPort: 4242
